# notification-service

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py
app/events/: repository.py  schemas.py  service.py  ws_manager.py
app/events/api/: __init__.py  deps.py  router.py
app/events/ws/: __init__.py  endpoint.py  manager.py
tests/: test_events_http.py  test_events_ws.py
