[project]
name = "notification-service"
version = "0.1.0"
description = "Mini notification service (FastAPI)"
contact = { name = "Sergey Syrnikov", email = "sergeysyrnikov91@gmail.com" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "ruff>=0.15.6",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "anyio>=4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

